@@ -1,0 +1,6 @@
+typedef char foo;
+
+foo charfoo (afoo)
+{
+  return (afoo * 2);
+}
